[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.162"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = "1.28.1"
tokio-postgres = "0.7.8"
